output/unpackaged/unpackaged/objects/Deal_Conflict_Scoring_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blocking_Threshold__c</fullName>
        <label>Blocking Threshold</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conflict_Type__c</fullName>
        <label>Conflict Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Version__c</fullName>
        <label>Rule Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Deal Conflict Scoring Rule</label>
    <pluralLabel>Deal Conflict Scoring Rules</pluralLabel>
</CustomObject>